fix blur on modals on small screens

--- a/style.css
+++ b/style.css
@@ -578,7 +578,7 @@ body.modal-open-mobile{
   }
 
   .project-modal-container{
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, calc(-10em - 15px));
     width: 1000px;
   }
 }
